# roboclaws

./: .dockerignore  .env.example  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTEXT.md  Dockerfile.coding-agents  Dockerfile.eval  Dockerfile.railway  LICENSE  Makefile  PLAN.md  README.md  STATUS.md  THOUGHTS.md  TODOS.md  justfile  pyproject.toml
.githooks/: post-checkout  post-merge  pre-commit
.github/workflows/: ci.yml
.planning/: INGEST-CONFLICTS.md  LOCAL-2026-04-22-phase-2.4-review-and-2.6-view-bridge-PLAN.md  MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/intel/: SYNTHESIS.md  constraints.md  context.md  decisions.md  requirements.md
.planning/milestones/: v1.98-ARCHIVE.md  v1.98-REQUIREMENTS.md  v1.98-ROADMAP.md
assets/maps/: b1-map12-alignment-review.json  b1-map12-base-metric-labels.json  b1-map12-base-navigation-labels.json  b1-map12-room-semantics.json  b1-map12-scene-correspondences.json
data/molmospaces/: scene_sampler_room_labels.json
demo/: README.md
deploy/railway/: entrypoint.sh  nginx.conf.template  supervisord.conf
docs/: ai2thor-rendering-deployment.md  coding-agent-nav-server.md  contributing.md  harness-self-improvement-loop.md  issues-roadmap.md  model-matrix.md  molmospaces-settings.md  openclaw-demo.md  openclaw-gateway-internals.md  openclaw-local.md  openclaw-plugin-allowlist.md  openclaw-tool-profiles.md  railway-deploy.md  railway-openclaw-appliance-plan.md  refactor-regression.md  technical-design.md
docs/adr/: 0001-use-ai2thor-for-phase-1.md  0002-defer-isaac-lab-to-phase-3.md  0003-separate-cleanup-agent-view-from-private-evaluation.md  0004-use-separate-mcp-servers-for-ai2thor-and-molmo-cleanup.md  0007-dogfood-adr-0003-mcp-with-clean-agent-runs.md  0008-evaluate-openclaw-on-adr-0003-mcp-after-direct-agent-dogfood.md  0013-add-raw-fpv-observation-mode-for-adr-0003-cleanup.md  0019-gate-rby1m-curobo-runtime-before-cleanup-primitives.md  0021-use-canonical-cleanup-report-presentation.md  0022-capture-rby1m-curobo-warmup-readiness.md  0023-use-isolated-curobo-extension-cache-for-rby1m-warmup.md  0026-use-visible-probe-local-curobo-memory-profile.md  0027-use-shared-semantic-cleanup-loop-driver.md  0028-add-planner-cleanup-bridge-readiness-evidence.md  0030-bind-planner-primitive-evidence-to-cleanup-targets.md  0035-use-bound-planner-proof-bundles-for-cleanup-coverage.md  0037-emit-cleanup-planner-proof-request-manifests.md  0038-render-planner-proof-requests-in-cleanup-reports.md  0039-render-planner-proof-bundle-runner-reports.md  0041-reuse-shared-semantic-cleanup-loop-in-mcp-smoke-demos.md  0042-add-dry-run-harness-for-planner-proof-bundle-runner.md  0043-track-cleanup-rerun-artifacts-in-proof-bundle-runner.md  (+59 more)
docs/human/: README.md  (+20 more)
examples/: coding_agent_nav_server.py  coverage_game.py  molmo_cleanup_agent_server.py  molmo_realworld_cleanup_agent_server.py  molmospaces_cleanup_demo.py  molmospaces_realworld_cleanup.py  openclaw_demo.py  openclaw_interactive.py  openclaw_nav_autonomous.py  openclaw_photo_task.py  single_agent_explore.py  territory_game.py  view_experiment.py
harness/: .gitignore  PLAN.md  README.md  run-next.sh  run.sh
just/: README.md  agent.just  appliance.just  chat.just  code.just  console.just  dev.just  harness.just  mcp.just  molmo.just  openclaw.just  run.just  task.just  verify.just  vlm.just
roboclaws/: regression.py
scripts/: analyze_refactor_regression.py  analyze_view_experiment.py  appliance-run-interactive.sh  appliance_control_ui_smoke.py  appliance_seed_openclaw.py  benchmark_ai2thor_rendering.py  capture_refactor_regression.py  check_kimi_key.py  check_molmo_agent_bridge_result.py  check_molmo_planner_manipulation_probe.py  check_molmo_planner_proof_bundle_runner_result.py  check_molmo_realworld_cleanup_result.py  check_molmospaces_cleanup_result.py  check_photo_task.py  control_ui_watcher.py  diagnose_openclaw_latency.py  generate_demo_report.py  molmospaces_subprocess_worker.py  network_status.sh  openclaw-bootstrap.sh  openclaw-defaults.env  openclaw_plugin_allowlist.py  prepare_molmospaces_room.py  regenerate_molmo_cleanup_report.py  render_autonomous_replay.py  run_molmo_agent_bridge_smoke.py  run_molmo_planner_manipulation_probe.py  run_molmo_planner_proof_bundle_from_requests.py  run_molmo_realworld_agent_mcp_smoke.py  run_molmospaces_grasp_cache_generation.py  run_molmospaces_grasp_filter_diagnostics.py  run_molmospaces_grasp_initial_contact_diagnostics.py  run_molmospaces_grasp_pose_policy_cache_generation.py  run_pytest_standalone.sh  setup_molmospaces_grasp_generation.py  tail-openclaw-chat.py  view-snapshots.py  write_pages_index.py
sidecars/molmospaces-filament/: pyproject.toml
sidecars/visual-grounding/: pyproject.toml
skills/: README.md
spike/: gateway_transcript_probe.py  mcp_image_probe.py
tests/: README.md  conftest.py  test_action_decision.py  test_analyze_refactor_regression.py  test_analyze_view_experiment.py  test_appliance_reset.py  test_appliance_runtime_config.py  test_appliance_seed_openclaw.py  test_bridge.py  test_bridge_start_run.py  test_capture_refactor_regression.py  test_check_molmo_agent_bridge_result.py  test_check_molmo_planner_manipulation_probe.py  test_check_molmo_planner_proof_bundle_runner_result.py  test_check_molmo_realworld_cleanup_result.py  test_code_just_recipes.py  test_code_mcp_binding_smoke.py  test_coding_agent_nav_server.py  test_control_ui_watcher.py  test_coverage.py  test_coverage_example.py  test_engine.py  test_engine_chase_cam.py  test_explore.py  test_grasp_filter_diagnostics.py  test_grasp_pose_policy_cache.py  test_harness_run_next.py  test_harness_runner.py  test_mcp_server.py  test_mcp_text_bridge.py  test_molmo_cleanup_agent_server.py  test_molmo_cleanup_artifact_report.py  test_molmo_cleanup_demo.py  test_molmo_cleanup_mcp_contract.py  test_molmo_cleanup_primitive_evidence.py  test_molmo_cleanup_report.py  test_molmo_cleanup_scenario.py  test_molmo_cleanup_subprocess_backend.py  test_molmo_mcp_smoke_shared_semantic_loop.py  test_molmo_planner_cleanup_bridge.py  (+42 more)
(+2202 files in other folders)
