[project]
name = "roboclaws"
version = "0.1.0"
description = "Multi-agent VLM/OpenClaw controlled robots: competition and cooperation in simulation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "ai2thor>=5.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40", "instructor>=1.5"]
openai = ["openai>=1.50", "instructor>=1.5"]
openclaw = ["mcp[cli]>=1.27", "tyro>=0.9.0"]
dev = [
    "ai2thor>=5.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "instructor>=1.5",
    "pydantic>=2.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "imageio>=2.30",
    "mcp[cli]>=1.27",
    "tyro>=0.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"
markers = [
    "integration: requires Docker (pinned Gateway image) or real model-provider API calls. The pre-commit hook excludes these; run them post-merge via `just dev::test-integration` or plain `pytest` to run everything.",
]
