[project]
name = "roboclaws"
version = "0.1.0"
description = "Visible household robot cleanup, mapping, and planner-proof demos"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.0",
    "numpy>=1.24",
    "Jinja2>=3.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40", "instructor>=1.5"]
openai = ["openai>=1.50", "instructor>=1.5"]
openclaw = ["mcp[cli]>=1.27", "tyro>=0.9.0"]
molmospaces = [
    "molmo-spaces[mujoco] @ git+https://github.com/allenai/molmospaces.git@3c50ae6093f7e4a4ef32529f8a773715da410a2f",
    "torch==2.7.1+cpu",
    "torchvision==0.22.1+cpu",
]
visual-grounding-dino = [
    "torch==2.7.1+cpu",
    "transformers>=4.52,<5",
]
visual-grounding-yoloe = [
    "clip @ git+https://github.com/ultralytics/CLIP.git",
    "ultralytics>=8.3",
]
dev = [
    "aiohttp>=3.13",
    "anthropic>=0.40",
    "openai>=1.50",
    "openai-agents==0.17.4",
    "instructor>=1.5",
    "pydantic>=2.0",
    "Pillow>=10.0",
    "numpy>=1.24",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "imageio>=2.30",
    "mcp[cli]>=1.27",
    "tyro>=0.9.0",
    "molmo-spaces[mujoco] @ git+https://github.com/allenai/molmospaces.git@3c50ae6093f7e4a4ef32529f8a773715da410a2f",
    "torch==2.7.1+cpu",
    "torchvision==0.22.1+cpu",
]
openai-agents = [
    "openai-agents==0.17.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["vendors"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q --strict-markers"
markers = [
    "unit: fast isolated behavior tests through public module APIs.",
    "contract: public schema, CLI, MCP tool, replay, report, and artifact compatibility tests.",
    "integration: requires Docker (pinned Gateway image) or real model-provider API calls. The pre-commit hook excludes these; run them post-merge via `just dev::test-integration` or plain `pytest` to run everything.",
    "regression: known-bug or high-level artifact regression coverage.",
    "local: requires local GPU, paid API key, real simulator, or real Gateway.",
    "slow: CI-safe but expensive enough to exclude from tight feedback loops.",
]
